# hephai-pr-doctor

./: .env.example  Dockerfile  README.md  event.json  pyproject.toml
.github/: CODEOWNERS  action.yml
.github/workflow/: hephai-test.yml  test.yml
.github/workflows/: bandit.yml  codeql.yml  pr-checks.yml
action/: Dockerfile  action.yml  main.py
hephai_pr_doctor/: main.py
hephai_pr_doctor/config/: __init__.py  config.py
hephai_pr_doctor/debug/: __init__.py  config.py  custom_logger.py
hephai_pr_doctor/reports/: __init__.py  generate_reports.py
hephai_pr_doctor/repositories/: __init__.py  analyze_repository.py  fetch_repository.py
hephai_pr_doctor/reviews/: __init__.py  pull_request.py
tests/: sample_code.py
